--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "chart.js": "^2.9.2",
         "js-cookie": "^2.2.1",
+        "moment": "^2.24.0",
         "vue-events": "^3.1.0",
         "vue-router": "^3.1.3",
         "vue-toasted": "^1.1.27"
