--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "axios": "^0.19.0",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
+        "eslint": "^6.8.0",
+        "eslint-plugin-vue": "^6.1.2",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
@@ -29,6 +31,7 @@
         "moment": "^2.24.0",
         "vue-events": "^3.1.0",
         "vue-router": "^3.1.3",
-        "vue-toasted": "^1.1.27"
+        "vue-toasted": "^1.1.27",
+        "vue2-datepicker": "^3.3.0"
     }
 }
