--- a/composer.json
+++ b/composer.json
@@ -40,8 +40,7 @@
         "classmap": [
             "database/seeds",
             "database/factories",
-            "app/Classes/WebAuthn",
-            "vendor/destruidorpt/laravel-sqrl-auth/src/app/Http/Controllers/SQRL"
+            "app/Classes/WebAuthn"
         ]
     },
     "autoload-dev": {
